fix(app): fix image name

--- a/src/config.json
+++ b/src/config.json
@@ -98,7 +98,7 @@
 					"alt": "Robin Gislain Shumbusho photography."
 				},
 				{
-					"name": "sindy-sunssengut",
+					"name": "sindy-sussengut",
 					"author": "Sindy Sunssegut",
 					"alt": "Sindy Sunssegut photography"
 				},
