--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "framer-motion": "^2.9.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-alice-carousel": "^2.0.1",
     "react-dom": "^16.13.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-router": "^5.2.0",
